testsuite/tests/typecheck/should_fail/T18723c.hs
{-# LANGUAGE UnboxedTuples #-}
module T18723c where

data T3 = MkT3
 (# Int, Int, Int, Int, Int, Int, Int, Int, Int, Int
  , Int, Int, Int, Int, Int, Int, Int, Int, Int, Int
  , Int, Int, Int, Int, Int, Int, Int, Int, Int, Int
  , Int, Int, Int, Int, Int, Int, Int, Int, Int, Int
  , Int, Int, Int, Int, Int, Int, Int, Int, Int, Int
  , Int, Int, Int, Int, Int, Int, Int, Int, Int, Int
  , Int, Int, Int
  #)
